# lib/db/src/schema/index.ts
@@ -1,2 +1,3 @@
 export * from "./products";
 export * from "./quotes";
+export * from "./customers";
